feat: show user spendings in a group (Closes #49)
commit b165aade049717e733d725374607c4f07e019704
Author: Pranaov S <git@pranaovs.me>
Date:   Sat Feb 7 02:44:53 2026 +0530

    shouldnt send error as middleware exists

commit d19d4df637a9060f315b36d6a04b45dbedf96cac
Author: Pranaov S <git@pranaovs.me>
Date:   Sat Feb 7 02:42:28 2026 +0530

    fix docs

commit 5bd30b19357ede89f9a6b6f211a7291a0c51e579
Author: Pranaov S <git@pranaovs.me>
Date:   Fri Feb 6 21:08:38 2026 +0000

    Update server/db/expenses.go


commit 01e22eeabd2ccc29446b7823c3eb9f03175627e2
Author: Pranaov S <git@pranaovs.me>
Date:   Sat Feb 7 02:33:27 2026 +0530

    fix spends

commit c87047eb66be21ff8d02ccf8631251ecb8960c2d
Author: Pranaov S <git@pranaovs.me>
Date:   Sat Feb 7 00:21:24 2026 +0530

    implement user spending report wip
